--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
     <description>全买酒站点项目</description>
 
     <modules>
-        <module>abw-site-core</module>
         <module>abw-site-web</module>
         <module>abw-site-service</module>
         <module>abw-site-dao</module>
@@ -55,6 +54,12 @@
                 <groupId>javax.servlet.jsp</groupId>
                 <artifactId>jsp-api</artifactId>
                 <version>2.1</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>2.5</version>
                 <scope>provided</scope>
             </dependency>
 
