--- a/abw-site-web/pom.xml
+++ b/abw-site-web/pom.xml
@@ -25,6 +25,10 @@
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+        </dependency>
 
         <!-- Spring MVC -->
         <dependency>
